generate random user

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 2</title>
+    <title>Random User Generator </title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-300">
 
     <header class="text-center mb-10">
-        <h1 class="text-2xl sm:text-5xl font-semibold my-5">Pick Your Random Person</h1>
+        <h1 class="text-2xl sm:text-5xl font-semibold my-5">Generate Random User</h1>
         <div class="flex justify-center">
             <input class="py-2 px-3 rounded-l" type="number" placeholder="Enter Number" id="show-user-input">
             <button class="py-2 px-3 rounded-r bg-sky-600 text-white" id="show-user-button">Generate</button>
